--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "bootstrap": "^5.3.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.2",
-    "react-toastify": "^11.0.2"
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^7.1.1",
+    "react-simple-maps": "^3.0.0",
+    "react-toastify": "^11.0.2",
+    "react-typed": "^2.0.12",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
