--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.1",
     "react-simple-maps": "^3.0.0",
